--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,25 @@ DOWNLOADER_PORT=9118
 DLPROTECT_RESOLVER_PORT=5000
 
 # -----------------------------------------------------------------------------
-# Site URLs (at least one required)
+# Site URLs (optional - auto-detected from Telegram if empty)
 # -----------------------------------------------------------------------------
-# Wawacity URL (recommended)
-WAWACITY_URL=https://www.wawacity.xxx/
+# If left empty, URLs are automatically fetched from official Telegram channels.
+# You can force specific URLs by setting them here.
 
-# ZoneTelecharger URL
-ZONETELECHARGER_URL=https://www.zone-telechargement.xxx/
+# Wawacity URL (leave empty for auto-detection)
+WAWACITY_URL=
+
+# ZoneTelecharger URL (leave empty for auto-detection)
+ZONETELECHARGER_URL=
+
+# -----------------------------------------------------------------------------
+# Telegram Channels (for auto-detection of site URLs)
+# -----------------------------------------------------------------------------
+# Official Telegram channels used to fetch current site URLs.
+# Default values are pre-configured, only change if channels move.
+
+#WAWACITY_TELEGRAM=https://t.me/s/Wawacityofficiel
+#ZONETELECHARGER_TELEGRAM=https://t.me/s/ztofficiel
 
 # DarkiWorld URL (currently disabled - not fully implemented)
 # DARKIWORLD_URL=https://darkiworld.xxx/
