--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,8 @@ services:
       - DARKIWORLD_PORT=${DARKIWORLD_PORT:-5002}
       - DARKIWORLD_DEBUG=${DARKIWORLD_DEBUG:-false}
       - DARKIWORLD_URL=${DARKIWORLD_URL}
-      - DARKIWORLD_REMEMBER_TOKEN=${DARKIWORLD_REMEMBER_TOKEN}
-      - DARKIWORLD_SESSION=${DARKIWORLD_SESSION}
-      - DARKIWORLD_XSRF_TOKEN=${DARKIWORLD_XSRF_TOKEN}
-      - DARKIWORLD_CONNECTED=${DARKIWORLD_CONNECTED}
-      - DARKIWORLD_SERVERID=${DARKIWORLD_SERVERID}
+      - DARKIWORLD_EMAIL=${DARKIWORLD_EMAIL}
+      - DARKIWORLD_PASSWORD=${DARKIWORLD_PASSWORD}
       - DARKIWORLD_ALLOWED_HOSTER=${DARKIWORLD_ALLOWED_HOSTER}
       - DARKIWORLD_ALLDEBRID_KEY=${ALLDEBRID_API_KEY}
     volumes:
