Parallelization of dead link verification

--- a/.env.example
+++ b/.env.example
@@ -12,16 +12,22 @@ DOWNLOADER_PORT=9118
 DLPROTECT_RESOLVER_PORT=5000
 
 # -----------------------------------------------------------------------------
-# Site URLs (optional - auto-detected from Telegram if empty)
+# Site URLs (optional - auto-detected if empty)
 # -----------------------------------------------------------------------------
-# If left empty, URLs are automatically fetched from official Telegram channels.
+# If left empty, URLs are automatically fetched:
+# - Wawacity/ZoneTelecharger: from official Telegram channels
+# - Darkiworld: via redirect from https://darkiworld.com/
 # You can force specific URLs by setting them here.
 
-# Wawacity URL (leave empty for auto-detection)
+# Wawacity URL (leave empty for auto-detection from Telegram)
 WAWACITY_URL=
 
-# ZoneTelecharger URL (leave empty for auto-detection)
+# ZoneTelecharger URL (leave empty for auto-detection from Telegram)
 ZONETELECHARGER_URL=
+
+# Darkiworld URL (leave empty for auto-detection via redirect)
+# The URL is resolved automatically by following https://darkiworld.com/ redirect
+DARKIWORLD_URL=
 
 # -----------------------------------------------------------------------------
 # Telegram Channels (for auto-detection of site URLs)
@@ -164,27 +170,13 @@ DEBUG=false
 # Node environment (development/production)
 NODE_ENV=production
 
-# DarkiWorld
+# DarkiWorld settings
 DARKIWORLD_PORT=5002
 DARKIWORLD_DEBUG=true
 
-# Darkiworld Site
-DARKIWORLD_URL=https://darkiworld15.com/
+# Darkiworld Authentication (email/password for automatic login)
+DARKIWORLD_EMAIL=
+DARKIWORLD_PASSWORD=
 
-# Essential Cookies (from user's browser session)
-
-# Laravel Remember Token
-DARKIWORLD_REMEMBER_TOKEN=
-
-# Laravel Session (needs to be updated with full value)
-DARKIWORLD_SESSION=
-
-# CSRF Token
-DARKIWORLD_XSRF_TOKEN=
-# Connected Status
-DARKIWORLD_CONNECTED=
-
-# Server ID
-DARKIWORLD_SERVERID=
-
+# Darkiworld allowed hosters (comma separated list)
 DARKIWORLD_ALLOWED_HOSTER=
