Cleaning dead code and logs

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,9 @@ WAWACITY_URL=
 ZONETELECHARGER_URL=
 
 # Darkiworld URL (leave empty for auto-detection via redirect)
-# The URL is resolved automatically by following https://darkiworld.com/ redirect
+# If empty, the darkiworld service will automatically resolve the URL by following
+# the redirect from https://darkiworld.com/ to find the current active domain.
+# The resolved URL is cached for the lifetime of the service.
 DARKIWORLD_URL=
 
 # -----------------------------------------------------------------------------
@@ -165,6 +167,7 @@ DISABLE_REMOTE_DL_PROTECT_CACHE=false
 
 # Debug mode: if true, processed .torrent files are moved to processed/ folder
 # If false (default), processed .torrent files are deleted
+# Also enables verbose logging across all services (indexer, downloader, darkiworld)
 DEBUG=false
 
 # Node environment (development/production)
@@ -172,7 +175,6 @@ NODE_ENV=production
 
 # DarkiWorld settings
 DARKIWORLD_PORT=5002
-DARKIWORLD_DEBUG=true
 
 # Darkiworld Authentication (email/password for automatic login)
 DARKIWORLD_EMAIL=
