--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "${DARKIWORLD_PORT:-5002}:${DARKIWORLD_PORT:-5002}"
     environment:
       - DARKIWORLD_PORT=${DARKIWORLD_PORT:-5002}
-      - DARKIWORLD_DEBUG=${DARKIWORLD_DEBUG:-false}
+      - DEBUG=${DEBUG:-false}
       - DARKIWORLD_URL=${DARKIWORLD_URL}
       - DARKIWORLD_EMAIL=${DARKIWORLD_EMAIL}
       - DARKIWORLD_PASSWORD=${DARKIWORLD_PASSWORD}
