implement auto-login on first startup with provided credentials

--- a/.env.example
+++ b/.env.example
@@ -177,6 +177,8 @@ NODE_ENV=production
 DARKIWORLD_PORT=5002
 
 # Darkiworld Authentication (email/password for automatic login)
+# If EMAIL and PASSWORD are configured, the service will automatically
+# connect and retrieve cookies at startup to speed up future requests.
 DARKIWORLD_EMAIL=
 DARKIWORLD_PASSWORD=
 
