Add darkiworld configuration in torznab frontend

--- a/.env.example
+++ b/.env.example
@@ -204,14 +204,8 @@ QBITTORRENT_DATA_PATH=./qbittorrent-data
 # Path for temporary downloads (files are downloaded here first, then moved)
 DOWNLOADS_TEMP_PATH=./downloads-temp
 
-# DarkiWorld settings
+# DarkiWorld Settings
 DARKIWORLD_PORT=5002
 
-# Darkiworld Authentication (email/password for automatic login)
-# If EMAIL and PASSWORD are configured, the service will automatically
-# connect and retrieve cookies at startup to speed up future requests.
-DARKIWORLD_EMAIL=
-DARKIWORLD_PASSWORD=
-
-# Darkiworld allowed hosters (comma separated list)
-DARKIWORLD_ALLOWED_HOSTER=
+# If blank, it will be automatically determined.
+DARKIWORLD_URL=
