--- a/darkiworld/Dockerfile
+++ b/darkiworld/Dockerfile
@@ -43,10 +43,9 @@ RUN apt-get update && apt-get install -y \
     # Python Tkinter for pyautogui and scrot for screenshots
     python3-tk \
     scrot \
-    && wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/googlechrome-linux-keyring.gpg \
-    && echo "deb [arch=amd64 signed-by=/usr/share/keyrings/googlechrome-linux-keyring.gpg] https://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list \
-    && apt-get update \
-    && apt-get install -y google-chrome-stable \
+    # Chromium for multi-arch support (AMD64 + ARM64)
+    chromium \
+    chromium-driver \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
